--- a/basic_concept/intro_python.ipynb
+++ b/basic_concept/intro_python.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -444,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -557,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -609,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -653,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -690,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -737,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -776,7 +776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -831,25 +831,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0kC9zyGjHYJ3",
-        "outputId": "afce5580-a811-487b-8b9a-802a3edb3c52"
+        "outputId": "1d448fb5-cab9-499e-96ed-de56b11ba25b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "decorator executed\n",
-            "test executed\n",
-            "result 1275\n",
-            "decorator executed\n",
-            "test executed\n",
-            "answer 1275\n"
+            "used time: 8.344650268554688e-06\n",
+            "50\n",
+            "used time: 1.6689300537109375e-06\n",
+            "50\n"
           ]
         }
       ],
@@ -869,57 +867,63 @@
         "decorated_func()\n",
         "\"\"\"\n",
         "\n",
-        "def calculate(callback):\n",
-        "  def run():\n",
-        "    print(\"decorator executed\")\n",
-        "    result=0\n",
-        "    for i in range(51):\n",
-        "      result+=i\n",
-        "    callback(result)\n",
-        "  return run\n",
+        "import time\n",
         "\n",
-        "@calculate\n",
-        "def show_reslut(n):\n",
-        "  print(\"test executed\")\n",
-        "  print(\"result\", n)\n",
+        "def check_run_time(callback):\n",
+        "  def wrapper(run_number):\n",
+        "    ts=time.time()\n",
+        "    result=callback(run_number)\n",
+        "    te=time.time()\n",
+        "    print(f\"used time: {te-ts}\")\n",
+        "    return result\n",
+        "  return wrapper\n",
         "\n",
-        "@calculate\n",
-        "def show_answer(n):\n",
-        "  print(\"test executed\")\n",
-        "  print(\"answer\", n)\n",
+        "@check_run_time\n",
+        "def for_looping(x):\n",
+        "  result=0\n",
+        "  for i in range(x):\n",
+        "    result+=i\n",
+        "  return x\n",
         "\n",
-        "show_reslut()\n",
-        "show_answer()"
+        "@check_run_time\n",
+        "def while_looping(x):\n",
+        "  result=0\n",
+        "  i=0\n",
+        "  while i!=0:\n",
+        "    result+=i\n",
+        "    i+=x\n",
+        "  return x\n",
+        "\n",
+        "print(for_looping(50))\n",
+        "print(while_looping(50))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c8jiX367RgKc",
-        "outputId": "4fa259bc-2e05-45ae-b0a9-76be33a2972a"
+        "outputId": "a6d03291-734c-4ff8-fba7-18dd93cbead0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "decorator executed\n",
-            "test executed\n",
-            "result 1275\n",
-            "decorator executed\n",
-            "test executed\n",
-            "answer 1830\n"
+            "for loop used: 6.9141387939453125e-06\n",
+            "50\n",
+            "while loop used: 1.430511474609375e-06\n",
+            "50\n"
           ]
         }
       ],
       "source": [
         "# decorator factory\n",
         "\"\"\"\n",
-        "def decorator_factory(parameter,...)\n",
+        "def decorator_factory(parameter,...):\n",
         "  def decorator(callback_func):\n",
         "    def inner_func():\n",
         "      statement\n",
@@ -933,29 +937,38 @@
         "\n",
         "decorated_func()\n",
         "\"\"\"\n",
-        "def calculate_factory(max):\n",
-        "  def calculate(callback):\n",
-        "    def run():\n",
-        "      print(\"decorator executed\")\n",
-        "      result=0\n",
-        "      for i in range(max+1):\n",
-        "        result+=i\n",
-        "      callback(result)\n",
-        "    return run\n",
-        "  return calculate\n",
         "\n",
-        "@calculate_factory(50)\n",
-        "def show_reslut(n):\n",
-        "  print(\"test executed\")\n",
-        "  print(\"result\", n)\n",
+        "import time\n",
         "\n",
-        "@calculate_factory(60)\n",
-        "def show_answer(n):\n",
-        "  print(\"test executed\")\n",
-        "  print(\"answer\", n)\n",
+        "def check_run_time_with_para(print_str):\n",
+        "  def check_run_time(callback):\n",
+        "    def wrapper(run_number):\n",
+        "      ts=time.time()\n",
+        "      result=callback(run_number)\n",
+        "      te=time.time()\n",
+        "      print(f\"{print_str}: {te-ts}\")\n",
+        "      return result\n",
+        "    return wrapper\n",
+        "  return check_run_time\n",
         "\n",
-        "show_reslut()\n",
-        "show_answer()"
+        "@check_run_time_with_para(\"for loop used\")\n",
+        "def for_looping(x):\n",
+        "  result=0\n",
+        "  for i in range(x):\n",
+        "    result+=i\n",
+        "  return x\n",
+        "\n",
+        "@check_run_time_with_para(\"while loop used\")\n",
+        "def while_looping(x):\n",
+        "  result=0\n",
+        "  i=0\n",
+        "  while i!=0:\n",
+        "    result+=i\n",
+        "    i+=x\n",
+        "  return x\n",
+        "\n",
+        "print(for_looping(50))\n",
+        "print(while_looping(50))"
       ]
     },
     {
@@ -976,7 +989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1069,7 +1082,7 @@
           "height": 70
         }
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1094,12 +1107,12 @@
       "metadata": {
         "id": "CC9Nu1aF7Qfk"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1156,7 +1169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1209,7 +1222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1241,7 +1254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1276,7 +1289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1300,7 +1313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1405,7 +1418,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1420,7 +1433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1470,7 +1483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1525,7 +1538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1585,7 +1598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1629,6 +1642,91 @@
         "except Exception:\n",
         "  print(\"Other Error\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Generator"
+      ],
+      "metadata": {
+        "id": "gI5WBW4vVca5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# generator\n",
+        "\"\"\"\n",
+        "def generator():\n",
+        "  yield value\n",
+        "\n",
+        "for iteration_variable in generator():\n",
+        "  statement\n",
+        "\"\"\"\n",
+        "\n",
+        "def generator():\n",
+        "  print(\"pass 1\")\n",
+        "  yield 3\n",
+        "  print(\"pass 2\")\n",
+        "  yield 5\n",
+        "\n",
+        "gen=generator()\n",
+        "for i in gen:\n",
+        "  print(i)\n",
+        "\n",
+        "\n",
+        "\n",
+        "def even_generator(x):\n",
+        "  result=0\n",
+        "  while i<x:\n",
+        "    yield result\n",
+        "    result+=2\n",
+        "\n",
+        "for i in even_generator(16):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "FXFf8ux0VYBF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# class generator\n",
+        "\"\"\"\n",
+        "class GeneratorClass:\n",
+        "  def __init__(self):\n",
+        "    statment\n",
+        "  \n",
+        "  def __iter__(self):\n",
+        "    yield value\n",
+        "\n",
+        "generator_obj=GeneratorClassName()\n",
+        "for iteration_variable in generator_obj:\n",
+        "  statement\n",
+        "\"\"\"\n",
+        "\n",
+        "class Cube:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  \n",
+        "  def __iter__(self):\n",
+        "    i=1\n",
+        "    while i<=5:\n",
+        "      yield i**3\n",
+        "      i+=1\n",
+        "\n",
+        "cube=Cube()\n",
+        "for i in cube:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "bsC1IJwEVr-G"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
