--- a/basic_concept/intro_python.ipynb
+++ b/basic_concept/intro_python.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,14 +44,14 @@
       ],
       "source": [
         "# output\n",
-        "# In C++, we distinguish a character and a string by single quotes and double quotes, respectively. However, in Python, there is no such a distinction, that is, characters are treated as string, and you can use single quotes or double quotes for strings.\n",
+        "# in c++, we distinguish a character and a string by single quotes and double quotes, respectively. however, in python, there is no such a distinction, that is, characters are treated as string\n",
         "print(\"hello world!\") # double quotes\n",
         "print('hello world!') # single quotes. Same as double quotes"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -160,7 +160,7 @@
         }
       ],
       "source": [
-        "# if statement syntax\n",
+        "# if-else\n",
         "\"\"\"\n",
         "if expression:\n",
         "  statement\n",
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -199,7 +199,7 @@
         }
       ],
       "source": [
-        "# if the body of a condition contains one line only, we can put this line right after the colon, like so:\n",
+        "# if the body of condition contains one line only, we can put this line right after the colon, like so:\n",
         "\"\"\"\n",
         "if expression: statement\n",
         "elif expression: statement\n",
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -233,7 +233,7 @@
         }
       ],
       "source": [
-        "# short-hand `if-else`. This is like the ternary operator in C++, but the syntax is different\n",
+        "# short-hand `if-else`. This is like the ternary operator in c++, but the syntax is different\n",
         "\"\"\"\n",
         "statement_1 if expression_1 else statement_2 if expression_2 else statement_3\n",
         "\"\"\"\n",
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -306,9 +306,12 @@
         }
       ],
       "source": [
-        "# nested for loops\n",
-        "# like other languages, we can also define nested for loops\n",
-        "# EX: print a multiplication table\n",
+        "# nested for loop\n",
+        "\"\"\"\n",
+        "for iteration_variable_1 in iterable_data_type:\n",
+        "  for iteration_variable_2 in iterable_data_type:\n",
+        "    statement\n",
+        "\"\"\"\n",
         "\n",
         "for i in range(1,10):\n",
         "  for j in range(1,10):\n",
@@ -328,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -412,7 +415,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +476,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -520,7 +523,7 @@
         }
       ],
       "source": [
-        "# function in python\n",
+        "# function\n",
         "\"\"\"\n",
         "def func0(parameter_1, parameter_2:data_type, parameter_3=default_value):\n",
         "  statement\n",
@@ -569,7 +572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -597,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -630,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -682,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -734,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -770,15 +773,15 @@
         "id": "HvswRxYLXWz6"
       },
       "source": [
-        "# Lambda function\n",
-        "* anonymous function (i.e. no function name)\n",
-        "* one expression\n",
-        "* automatically return result no need keyword `return`"
+        "# Lambda Function\n",
+        "* Anonymous function (i.e. no function name)\n",
+        "* Only one expression\n",
+        "* Automatically return result no need keyword `return`"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -815,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -862,7 +865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -901,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -945,6 +948,76 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Hook Function\n",
+        "* Similar with callback function"
+      ],
+      "metadata": {
+        "id": "W8V4zc4G91aV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EqCDefo19uDr",
+        "outputId": "b5987456-09a1-492e-d779-343b77c36da6"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tom get up\n",
+            "Tom : The meat is nice!!!\n",
+            "Jerry get up\n",
+            "Jerry : The hamburger is not so bad!!!\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Person(object):\n",
+        "  def __init__(self, name):\n",
+        "    self.name=name\n",
+        "    self.dinner_func=None # hook location\n",
+        "\n",
+        "  def get_up(self):\n",
+        "    print(f\"{self.name} get up\")\n",
+        "\n",
+        "  def register_dinner_hook(self, dinner_func):\n",
+        "    self.dinner_func=dinner_func\n",
+        "\n",
+        "  def enjoy_a_day(self):\n",
+        "    self.get_up()\n",
+        "    # dinner --> check the dinner_func (hooked or unhooked) --> hooked\n",
+        "    if self.dinner_func is not None:\n",
+        "      self.dinner_func(self.name)\n",
+        "    else: # unhooked\n",
+        "      print(\"nothing to eat at dinner\")\n",
+        "\n",
+        "# hook function\n",
+        "def eat_meat(name):\n",
+        "  print(f\"{name} : The meat is nice!!!\")\n",
+        "\n",
+        "def eat_hamburger(name):\n",
+        "  print(f\"{name} : The hamburger is not so bad!!!\")\n",
+        "\n",
+        "\n",
+        "tom=Person(\"Tom\")\n",
+        "jerry=Person(\"Jerry\")\n",
+        "# register hook\n",
+        "tom.register_dinner_hook(eat_meat)\n",
+        "jerry.register_dinner_hook(eat_hamburger)\n",
+        "# enjoy a day\n",
+        "tom.enjoy_a_day()\n",
+        "jerry.enjoy_a_day()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1wLl2_HSHbJB"
       },
@@ -956,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1025,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1102,7 +1175,7 @@
         "id": "hu2DT4OyAgPl"
       },
       "source": [
-        "# OOP in python\n",
+        "# Object Oriented Programming in Python\n",
         "unlike C++, python doesn\"t have access specifier (i.e., no `private`, `public` keywords), but u can follow the naming rule below to have better identification:\n",
         "* vari --> public\n",
         "* _vari --> protected\n",
@@ -1115,7 +1188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1204,11 +1277,10 @@
         "id": "A1s5R6CK7_7E",
         "outputId": "3aae457d-01a3-44ee-9709-b7378af3299e",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1233,12 +1305,12 @@
       "metadata": {
         "id": "CC9Nu1aF7Qfk"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1295,7 +1367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1348,7 +1420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1380,7 +1452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1415,7 +1487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1439,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1544,7 +1616,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1559,7 +1631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1609,11 +1681,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "oOpM0vaEVdog",
         "outputId": "e828f04f-96e6-41df-eedd-bd7efcd1e934"
@@ -1664,11 +1735,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "bBIjOnTZV0JC",
         "outputId": "5856d95b-136f-4981-c0b0-62b5c7568ffb"
@@ -1724,7 +1794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
