--- a/basic_concept/intro_python.ipynb
+++ b/basic_concept/intro_python.ipynb
@@ -529,7 +529,7 @@
         "  statement\n",
         "  return expression\n",
         "\n",
-        "func0(argument_1,parameter_2)\n",
+        "func0(arg_1, arg_2)\n",
         "\n",
         "\n",
         "def func1(parameter):\n",
@@ -658,7 +658,7 @@
         "  statement\n",
         "  return expression\n",
         "\n",
-        "func(arg1,arg2,arg3,...)\n",
+        "func(arg_1, arg_2, arg_3,...)\n",
         "\"\"\"\n",
         "\n",
         "def func(*ns):\n",
@@ -717,8 +717,15 @@
       ],
       "source": [
         "# recursion\n",
-        "# n!=1*2 * .... * n\n",
+        "\"\"\"\n",
+        "def func(parameter):\n",
+        "  func(parameter)\n",
+        "  statement\n",
         "\n",
+        "func(arg_1)\n",
+        "\"\"\"\n",
+        "\n",
+        "# n!=1*2 * .... * n\n",
         "def factorial (x:int, level:int):\n",
         "  if x == 1:\n",
         "    print(\"  \" * level+\" base case x=\"+str(x))\n",
@@ -1176,7 +1183,7 @@
       },
       "source": [
         "# Object Oriented Programming in Python\n",
-        "unlike C++, python doesn\"t have access specifier (i.e., no `private`, `public` keywords), but u can follow the naming rule below to have better identification:\n",
+        "Unlike C++, python doesn\"t have access specifier (i.e., no `private`, `public` keywords), but u can follow the naming rule below to have better identification:\n",
         "* vari --> public\n",
         "* _vari --> protected\n",
         "* __vari --> private\n",
