--- a/basic_concept/intro_python.ipynb
+++ b/basic_concept/intro_python.ipynb
@@ -1454,7 +1454,12 @@
         "print(sqrt(4))\n",
         "\n",
         "from math import sqrt as square_root # import sqrt() and rename\n",
-        "print(square_root(4))"
+        "print(square_root(4))\n",
+        "\n",
+        "\"\"\"\n",
+        "import warnings\n",
+        "warnings.filterwarnings(action='ignore') # ignore warning\n",
+        "\"\"\""
       ]
     },
     {
@@ -1518,40 +1523,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5pGc4mTm0JQ",
-        "outputId": "f76f8e1a-4d08-411f-cbe9-4ca04fb92bf8"
+        "outputId": "438a0221-f702-4352-cc16-5047ebd71d37"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "20\n",
-            "[5, 6, 1]\n",
-            "[10, 40, 30, 20]\n",
-            "0.5779717553170927\n",
-            "52.156337361786434\n",
-            "89.47938096177222\n",
-            "4\n",
-            "7\n",
-            "11.349008767288888\n"
+            "5\n",
+            "[6, 1, 20]\n",
+            "[10, 20, 30, 40]\n",
+            "0.845613221084483\n",
+            "34.879956865132\n",
+            "97.47707090142356\n"
           ]
         }
       ],
       "source": [
         "# random module\n",
         "import random\n",
-        "# random choice\n",
-        "data=random.choice([1,5,6,10,20])\n",
+        "data=random.choice([1,5,6,10,20]) # random choice\n",
         "print(data)\n",
         "data=random.sample([1,5,6,10,20],3)\n",
         "print(data)\n",
-        "# random swap(洗牌)\n",
+        "# random swap\n",
         "data=[10,20,30,40]\n",
         "random.shuffle(data)\n",
         "print(data)\n",
@@ -1563,18 +1564,34 @@
         "print(data)\n",
         "\n",
         "# random number with stdev\n",
-        "data=random.normalvariate(100,10)\n",
-        "# mean=100，stdev=10 得到資料大多數在90-100間\n",
-        "print(data)\n",
-        "\n",
-        "#statistics module \n",
-        "import statistics as stat\n",
-        "data=stat.mean([1,3,5,7])#mean\n",
-        "print(data)\n",
-        "data=stat.median([1,30,5,7,9])#median\n",
-        "print(data)\n",
-        "data=stat.stdev([1,30,5,7,9])#stdev\n",
+        "data=random.normalvariate(100,10) # mean=100，stdev=10 data mostly between 90-100\n",
         "print(data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# statistics module \n",
+        "import statistics as stat\n",
+        "data=[1,3,5,7]\n",
+        "print(f\"mean:{stat.mean(data)}, median:{stat.median(data)}, stdev:{stat.stdev(data)}\")"
+      ],
+      "metadata": {
+        "id": "-FIljPYJoZrI",
+        "outputId": "a63ac26d-36c0-4f98-e175-6bc32dc3a40c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mean:4, median:4.0, stdev:2.581988897471611\n"
+          ]
+        }
       ]
     },
     {
