--- a/basic_concept/intro_python.ipynb
+++ b/basic_concept/intro_python.ipynb
@@ -536,7 +536,7 @@
       "source": [
         "# function\n",
         "\"\"\"\n",
-        "def func1(parameter):\n",
+        "def func(parameter):\n",
         "  statement\n",
         "  return expression\n",
         "\"\"\"\n",
@@ -586,7 +586,7 @@
       "source": [
         "# limit parameter data type\n",
         "\"\"\"\n",
-        "def func2(parameter:data_type): # \":\" in \"<variable>:<data type>\" limited the parameter data type\"\n",
+        "def func(parameter:data_type): # \":\" in \"<variable>:<data type>\" limited the parameter data type\"\n",
         "  statement\n",
         "  return expression\n",
         "\n",
@@ -748,7 +748,7 @@
       "source": [
         "# *args and **kwargs\n",
         "\"\"\"\n",
-        "def func_4(*args, **kwargs): # *args: args is a tuple,  **kwargs: kwargs is a dictionary\n",
+        "def func(*args, **kwargs): # *args: args is a tuple,  **kwargs: kwargs is a dictionary\n",
         "  statement\n",
         "  return expression\n",
         "\"\"\"\n",
