--- a/data_structure/tree.ipynb
+++ b/data_structure/tree.ipynb
@@ -32,9 +32,8 @@
       "source": [
         "# Tree\n",
         "\n",
-        "|Data Structures (SEHH2239)|Discrete Structures (SEHH2241)|\n",
+        "|Using 1 as first level|Using 0 as first level|\n",
         "|:---:|:---:|\n",
-        "|Use 1 as first level|Use 0 as first level|\n",
         "|Height of empty tree is 0||\n",
         "|Height=Depth=Highest Level Number|Height=Depth=Highest Level Number|\n",
         "\n",
@@ -51,7 +50,7 @@
         "\n",
         "Above tree:\n",
         "\n",
-        "||Data Structures (SEHH2239)|Discrete Structures (SEHH2241)|\n",
+        "||Using 1 as first level|Using 0 as first level|\n",
         "|:---|:---:|:---:|\n",
         "|Root|B|B|\n",
         "|Leaves|A,C,E,F|A,C,E,F|\n",
@@ -66,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "KBo1-I3yc6aU"
       },
@@ -126,7 +125,7 @@
       "metadata": {
         "id": "OgHFq-m7dQ8U"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +150,7 @@
       "metadata": {
         "id": "u-G3Oz8FK2MH"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +238,7 @@
         "id": "REBaZ8tfuW_A",
         "outputId": "e65344a8-d9b7-4743-cbdc-d139c6723c3e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +338,7 @@
         "id": "A5iqnusVNcGO",
         "outputId": "9c50bc7a-00f2-4e85-90c8-7ff9adc3e5b1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +526,7 @@
         "id": "2qXfT9yJsYjZ",
         "outputId": "ee984874-b7fc-4779-f12c-d4794b0b1776"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +648,7 @@
         "id": "T0DnnfKNPoz0",
         "outputId": "f7b9a3c4-ab0a-46bc-d39b-cae1bb69b6ac"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +818,7 @@
         "id": "kGYlueEvf_oI",
         "outputId": "570d0c5e-f921-4d8d-aeea-ae43459968f5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
